--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -3065,10 +3065,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3087,51 +3083,6 @@ normal
 .
 png
 "
-)
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-normal
-1
-.
-5x
-.
-png
-"
-)
-1
-.
-5x
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-normal
-2x
-.
-png
-"
-)
-2x
 )
 ;
 }
@@ -3192,10 +3143,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3216,55 +3163,6 @@ left
 .
 png
 "
-)
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-left
-1
-.
-5x
-.
-png
-"
-)
-1
-.
-5x
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-left
-2x
-.
-png
-"
-)
-2x
 )
 ;
 }
@@ -3324,10 +3222,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3348,55 +3242,6 @@ right
 .
 png
 "
-)
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-right
-1
-.
-5x
-.
-png
-"
-)
-1
-.
-5x
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-right
-2x
-.
-png
-"
-)
-2x
 )
 ;
 }
@@ -3439,6 +3284,451 @@ visibility
 :
 hidden
 ;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+5dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+1
+.
+5x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+1
+.
+5x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+1
+.
+5x
+.
+png
+"
+)
+;
+}
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+2x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+2x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+2x
+.
+png
+"
+)
+;
+}
+}
+media
+(
+min
+-
+resolution
+:
+2
+.
+25dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+2
+.
+25x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+2
+.
+25x
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+2
+.
+25x
+.
+png
+"
+)
+;
+}
 }
 %
 ifdef
@@ -3603,10 +3893,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3628,55 +3914,6 @@ hdpi
 .
 png
 "
-)
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xhdpi
-.
-png
-"
-)
-2x
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xxhdpi
-.
-png
-"
-)
-2
-.
-25x
 )
 ;
 }
@@ -3737,10 +3974,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3764,59 +3997,6 @@ hdpi
 .
 png
 "
-)
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xhdpi
-.
-png
-"
-)
-2x
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xxhdpi
-.
-png
-"
-)
-2
-.
-25x
 )
 ;
 }
@@ -3877,10 +4057,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3905,6 +4081,287 @@ hdpi
 png
 "
 )
+;
+}
+media
+(
+min
+-
+resolution
+:
+1
+.
+5dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+normal
+-
+hdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+left
+-
+hdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+right
+-
+hdpi
+.
+png
+"
+)
+;
+}
+}
+media
+(
+min
+-
+resolution
+:
+2dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+normal
+-
+xhdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+left
+-
+xhdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
 url
 (
 "
@@ -3929,7 +4386,136 @@ xhdpi
 png
 "
 )
-2x
+;
+}
+}
+media
+(
+min
+-
+resolution
+:
+2
+.
+25dppx
+)
+{
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+normal
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+normal
+-
+xxhdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+left
+>
+#
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+left
+-
+xxhdpi
+.
+png
+"
+)
+;
+}
+div
+:
+-
+moz
+-
+native
+-
+anonymous
+.
+moz
+-
+accessiblecaret
+.
+right
+>
+#
+image
+{
+background
+-
+image
+:
 url
 (
 "
@@ -3954,11 +4540,8 @@ xxhdpi
 png
 "
 )
-2
-.
-25x
-)
 ;
+}
 }
 %
 endif
