--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -3065,6 +3065,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -3083,6 +3087,75 @@ normal
 .
 png
 "
+)
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+1
+.
+5x
+.
+png
+"
+)
+1
+.
+5x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+2x
+.
+png
+"
+)
+2x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+normal
+2
+.
+25x
+.
+png
+"
+)
+2
+.
+25x
 )
 ;
 }
@@ -3143,6 +3216,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -3163,6 +3240,81 @@ left
 .
 png
 "
+)
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+1
+.
+5x
+.
+png
+"
+)
+1
+.
+5x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+2x
+.
+png
+"
+)
+2x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+left
+2
+.
+25x
+.
+png
+"
+)
+2
+.
+25x
 )
 ;
 }
@@ -3222,6 +3374,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -3242,6 +3398,81 @@ right
 .
 png
 "
+)
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+1
+.
+5x
+.
+png
+"
+)
+1
+.
+5x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+2x
+.
+png
+"
+)
+2x
+url
+(
+"
+resource
+:
+/
+/
+gre
+-
+resources
+/
+accessiblecaret
+-
+tilt
+-
+right
+2
+.
+25x
+.
+png
+"
+)
+2
+.
+25x
 )
 ;
 }
@@ -3284,451 +3515,6 @@ visibility
 :
 hidden
 ;
-}
-media
-(
-min
--
-resolution
-:
-1
-.
-5dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-normal
-1
-.
-5x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-left
-1
-.
-5x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-right
-1
-.
-5x
-.
-png
-"
-)
-;
-}
-}
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-normal
-2x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-left
-2x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-right
-2x
-.
-png
-"
-)
-;
-}
-}
-media
-(
-min
--
-resolution
-:
-2
-.
-25dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-normal
-2
-.
-25x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-left
-2
-.
-25x
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-resource
-:
-/
-/
-gre
--
-resources
-/
-accessiblecaret
--
-tilt
--
-right
-2
-.
-25x
-.
-png
-"
-)
-;
-}
 }
 %
 ifdef
@@ -3893,6 +3679,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -3914,6 +3704,55 @@ hdpi
 .
 png
 "
+)
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+normal
+-
+xhdpi
+.
+png
+"
+)
+2x
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+normal
+-
+xxhdpi
+.
+png
+"
+)
+2
+.
+25x
 )
 ;
 }
@@ -3974,6 +3813,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -3997,6 +3840,59 @@ hdpi
 .
 png
 "
+)
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+left
+-
+xhdpi
+.
+png
+"
+)
+2x
+url
+(
+"
+chrome
+:
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+left
+-
+xxhdpi
+.
+png
+"
+)
+2
+.
+25x
 )
 ;
 }
@@ -4057,6 +3953,10 @@ background
 -
 image
 :
+image
+-
+set
+(
 url
 (
 "
@@ -4081,287 +3981,6 @@ hdpi
 png
 "
 )
-;
-}
-media
-(
-min
--
-resolution
-:
-1
-.
-5dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-hdpi
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-hdpi
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-right
--
-hdpi
-.
-png
-"
-)
-;
-}
-}
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xhdpi
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xhdpi
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
 url
 (
 "
@@ -4386,162 +4005,36 @@ xhdpi
 png
 "
 )
-;
-}
-}
-media
+2x
+url
 (
-min
--
-resolution
+"
+chrome
 :
+/
+/
+geckoview
+/
+skin
+/
+images
+/
+accessiblecaret
+-
+tilt
+-
+right
+-
+xxhdpi
+.
+png
+"
+)
 2
 .
-25dppx
-)
-{
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-normal
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xxhdpi
-.
-png
-"
+25x
 )
 ;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-left
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xxhdpi
-.
-png
-"
-)
-;
-}
-div
-:
--
-moz
--
-native
--
-anonymous
-.
-moz
--
-accessiblecaret
-.
-right
->
-#
-image
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-right
--
-xxhdpi
-.
-png
-"
-)
-;
-}
 }
 %
 endif
