Bug 1720836 - Restore Go button appearance by partially reverting D114642. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D120666

UltraBlame original commit: 63666019e518e19c4b7e92d53f75cb9ae2f8c6d9

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -3550,6 +3550,18 @@ urlbar
 page
 -
 action
+#
+urlbar
+-
+go
+-
+button
+.
+search
+-
+go
+-
+button
 {
 width
 :
@@ -3668,9 +3680,7 @@ compact
 .
 urlbar
 -
-page
--
-action
+icon
 {
 margin
 -
@@ -3682,9 +3692,7 @@ inline
 .
 urlbar
 -
-page
--
-action
+icon
 :
 not
 (
@@ -3714,9 +3722,7 @@ hsla
 .
 urlbar
 -
-page
--
-action
+icon
 :
 not
 (
@@ -3730,9 +3736,7 @@ open
 .
 urlbar
 -
-page
--
-action
+icon
 :
 not
 (
@@ -3764,9 +3768,7 @@ hsla
 .
 urlbar
 -
-page
--
-action
+icon
 :
 -
 moz
