Bug 1249548 - Use svg for GeckoView carets. r=TYLin,agi
This allows us to style them with system colors. The SVGs are comment 2
but:

 * Cleaned up manually (removed random ids / namespaces / etc).
 * With -moz-accent-color as the fill color rather than orange.
 * With license added (since it was added by a mozilla.com address I'm
   pretty sure we can use them pretty much as-is, thanks :antlam!).

Differential Revision: https://phabricator.services.mozilla.com/D120910

UltraBlame original commit: b2899198bb54c5844bdf7ae3ea947d3d5cfa7d60

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -3679,10 +3679,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3699,60 +3695,9 @@ images
 accessiblecaret
 -
 normal
--
-hdpi
 .
-png
+svg
 "
-)
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xhdpi
-.
-png
-"
-)
-2x
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-normal
--
-xxhdpi
-.
-png
-"
-)
-2
-.
-25x
 )
 ;
 }
@@ -3813,10 +3758,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3835,64 +3776,9 @@ accessiblecaret
 tilt
 -
 left
--
-hdpi
 .
-png
+svg
 "
-)
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xhdpi
-.
-png
-"
-)
-2x
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-left
--
-xxhdpi
-.
-png
-"
-)
-2
-.
-25x
 )
 ;
 }
@@ -3953,10 +3839,6 @@ background
 -
 image
 :
-image
--
-set
-(
 url
 (
 "
@@ -3975,64 +3857,9 @@ accessiblecaret
 tilt
 -
 right
--
-hdpi
 .
-png
+svg
 "
-)
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-right
--
-xhdpi
-.
-png
-"
-)
-2x
-url
-(
-"
-chrome
-:
-/
-/
-geckoview
-/
-skin
-/
-images
-/
-accessiblecaret
--
-tilt
--
-right
--
-xxhdpi
-.
-png
-"
-)
-2
-.
-25x
 )
 ;
 }
