--- a/toolkit/components/pdfjs/content/web/viewer.css
+++ b/toolkit/components/pdfjs/content/web/viewer.css
@@ -1376,6 +1376,103 @@ cursor
 pointer
 ;
 }
+:
+root
+{
+-
+-
+unfocused
+-
+field
+-
+background
+:
+url
+(
+"
+data
+:
+image
+/
+svg
++
+xml
+;
+charset
+=
+UTF
+-
+8
+<
+svg
+width
+=
+'
+1px
+'
+height
+=
+'
+1px
+'
+xmlns
+=
+'
+http
+:
+/
+/
+www
+.
+w3
+.
+org
+/
+2000
+/
+svg
+'
+>
+<
+rect
+width
+=
+'
+100
+%
+'
+height
+=
+'
+100
+%
+'
+style
+=
+'
+fill
+:
+rgba
+(
+0
+54
+255
+0
+.
+13
+)
+;
+'
+/
+>
+<
+/
+svg
+>
+"
+)
+;
+}
 .
 xfaPage
 {
@@ -1501,6 +1598,8 @@ border
 box
 ;
 background
+-
+color
 :
 transparent
 ;
@@ -1517,6 +1616,12 @@ pointer
 events
 :
 auto
+;
+line
+-
+height
+:
+inherit
 ;
 }
 .
@@ -1633,7 +1738,7 @@ hidden
 flex
 :
 0
-1
+0
 auto
 ;
 }
@@ -1686,12 +1791,44 @@ center
 ;
 }
 .
+xfaRight
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+row
+-
+reverse
+;
+align
+-
+items
+:
+center
+;
+}
+.
 xfaLeft
 >
 .
 xfaCaption
 .
 xfaLeft
+>
+.
+xfaCaptionForCheckButton
+.
+xfaRight
+>
+.
+xfaCaption
+.
+xfaRight
 >
 .
 xfaCaptionForCheckButton
@@ -1727,12 +1864,46 @@ start
 ;
 }
 .
+xfaBottom
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+column
+-
+reverse
+;
+align
+-
+items
+:
+flex
+-
+start
+;
+}
+.
 xfaTop
 >
 .
 xfaCaption
 .
 xfaTop
+>
+.
+xfaCaptionForCheckButton
+.
+xfaBottom
+>
+.
+xfaCaption
+.
+xfaBottom
 >
 .
 xfaCaptionForCheckButton
@@ -1747,6 +1918,8 @@ width
 xfaBorder
 {
 background
+-
+color
 :
 transparent
 ;
@@ -1777,33 +1950,19 @@ height
 }
 .
 xfaTextfield
+:
+focus
 .
 xfaSelect
+:
+focus
 {
 background
 -
-color
+image
 :
-rgba
-(
-0
-54
-255
-0
-.
-13
-)
+none
 ;
-}
-.
-xfaTextfield
-:
-focus
-.
-xfaSelect
-:
-focus
-{
 background
 -
 color
@@ -1820,12 +1979,12 @@ xfaTextfield
 .
 xfaSelect
 {
-width
+height
 :
 100
 %
 ;
-height
+width
 :
 100
 %
@@ -1834,7 +1993,7 @@ flex
 :
 1
 1
-0
+auto
 ;
 border
 :
@@ -1843,6 +2002,49 @@ none
 resize
 :
 none
+;
+background
+-
+image
+:
+var
+(
+-
+-
+unfocused
+-
+field
+-
+background
+)
+;
+}
+.
+xfaTop
+>
+.
+xfaTextfield
+.
+xfaTop
+>
+.
+xfaSelect
+.
+xfaBottom
+>
+.
+xfaTextfield
+.
+xfaBottom
+>
+.
+xfaSelect
+{
+flex
+:
+0
+1
+auto
 ;
 }
 .
@@ -1871,16 +2073,6 @@ text
 align
 :
 center
-;
-}
-.
-xfaButton
-:
-hover
-{
-background
-:
-Highlight
 ;
 }
 .
@@ -2181,8 +2373,6 @@ xfaTextfield
 xfaSelect
 {
 background
--
-color
 :
 transparent
 ;
