Bug 1716212 Part 2 - Carry nsComboboxControlFrame's line-height to nsComboboxDisplayFrame when it has auto block-size. r=emilio
The issue is that combobox display may contain some non-Latin characters
that need extra block-size to display than the one line-height
calculate by using a Latin font spec in combobox control's style.

Before this patch, when a combobox control has unconstrained block-size,
we set combobox display's block-size to combobox control's one
line-height in Reflow(), which is intended to properly initialize
`BlockReflowInput::mMinLineHeight` since combobox display has
`line-height:-moz-block-height`. However, this simply prevents the
combobox display from choosing a larger block-size after the reflow. See
bug 1716212 comment 11 for an analysis.

This patch fixes the issue by carrying combox control's computed line
height to combobox display so that its computed block-size is still
unconstrained so that it can accommodate taller characters in the
display text.

After this patch, <select><option> containing non-Latin characters
should have the same block-size as <button>, and no characters should be
clipped. Modified test_unstyled_control_height.html to test this.

Differential Revision: https://phabricator.services.mozilla.com/D120877

UltraBlame original commit: ae2dbf11fa4c1ad48b7f439eec376e15cf47bfba

--- a/layout/forms/test/test_unstyled_control_height.html
+++ b/layout/forms/test/test_unstyled_control_height.html
@@ -4,6 +4,16 @@ doctype
 html
 >
 <
+meta
+charset
+=
+"
+utf
+-
+8
+"
+>
+<
 script
 src
 =
@@ -28,6 +38,9 @@ style
 #
 container
 *
+#
+container2
+*
 {
 white
 -
@@ -38,6 +51,33 @@ nowrap
 appearance
 :
 none
+;
+}
+input
+{
+/
+*
+Reduce
+the
+width
+so
+that
+container
+can
+fit
+all
+its
+children
+in
+600px
+viewport
+width
+.
+*
+/
+width
+:
+100px
 ;
 }
 input
@@ -111,6 +151,35 @@ padding
 style
 >
 <
+!
+-
+-
+Each
+container
+should
+fit
+all
+its
+children
+in
+the
+same
+line
+to
+verify
+every
+child
+has
+the
+same
+|
+top
+|
+.
+-
+-
+>
+<
 div
 id
 =
@@ -120,6 +189,66 @@ container
 >
 <
 input
+>
+<
+!
+-
+-
+Putting
+the
+<
+input
+>
+containing
+Burmese
+characters
+here
+is
+just
+to
+verify
+our
+current
+behavior
+.
+They
+are
+slightly
+clipped
+.
+So
+if
+we
+fix
+it
+by
+making
+the
+<
+input
+>
+taller
+it
+'
+s
+OK
+to
+remove
+it
+from
+this
+test
+.
+-
+-
+>
+<
+input
+value
+=
+"
+jpg
+"
 >
 <
 input
@@ -155,11 +284,50 @@ select
 div
 >
 <
+br
+>
+<
+div
+id
+=
+"
+container2
+"
+>
+<
+button
+>
+Foo
+<
+/
+button
+>
+<
+select
+>
+<
+option
+>
+Foo
+<
+/
+option
+>
+<
+/
+select
+>
+<
+/
+div
+>
+<
 script
 >
 function
 testHeightMatches
 (
+id
 desc
 )
 {
@@ -182,12 +350,12 @@ document
 .
 querySelectorAll
 (
-"
 #
-container
+{
+id
+}
 >
 *
-"
 )
 )
 {
@@ -270,6 +438,20 @@ desc
 ;
 }
 }
+for
+(
+id
+of
+[
+"
+container
+"
+"
+container2
+"
+]
+)
+{
 const
 container
 =
@@ -277,13 +459,12 @@ document
 .
 getElementById
 (
-"
-container
-"
+id
 )
 ;
 testHeightMatches
 (
+id
 "
 "
 )
@@ -300,6 +481,7 @@ padding
 ;
 testHeightMatches
 (
+id
 "
 without
 padding
@@ -318,6 +500,7 @@ font
 ;
 testHeightMatches
 (
+id
 "
 with
 an
@@ -326,6 +509,7 @@ font
 "
 )
 ;
+}
 <
 /
 script
