--- a/browser/themes/shared/preferences/preferences.inc.css
+++ b/browser/themes/shared/preferences/preferences.inc.css
@@ -3796,14 +3796,30 @@ chrome
 :
 /
 /
-browser
+global
 /
 skin
+/
+icons
 /
 warning
 .
 svg
 )
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+#
+FFBF00
 ;
 margin
 -
