--- a/browser/themes/shared/downloads/allDownloadsView.inc.css
+++ b/browser/themes/shared/downloads/allDownloadsView.inc.css
@@ -239,15 +239,31 @@ chrome
 :
 /
 /
-browser
+global
 /
 skin
+/
+icons
 /
 warning
 .
 svg
 "
 )
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+#
+FFBF00
 ;
 }
 item
