Bug 1650089 - Part 4: Update various tests with new expectations, r=annyG,kmag
The changes in the previous part had a few behaviour changes which are visible
in tests, including cross-origin iframes with sandboxed origins now loading
remotely, and process selection for chrome-triggered null principal loads
behaving differently. In general this caused more process switches.

Differential Revision: https://phabricator.services.mozilla.com/D120674

UltraBlame original commit: 5ae2b26414844c11cbc9cc68c8a6f1792f7fa0d6

--- a/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
@@ -1297,25 +1297,6 @@ data
 }
 )
 ;
-/
-/
-Bug
-1589102
-:
-using
-plain
-"
-about
-:
-blank
-"
-crashes
-here
-in
-fission
-+
-debug
-.
 win
 .
 location
@@ -1324,9 +1305,87 @@ location
 about
 :
 blank
-?
-2
 "
+;
+/
+/
+Wait
+for
+the
+about
+:
+blank
+load
+to
+finish
+before
+continuing
+in
+case
+this
+/
+/
+load
+is
+causing
+a
+process
+switch
+back
+into
+our
+process
+.
+await
+SimpleTest
+.
+promiseWaitForCondition
+(
+(
+)
+=
+>
+{
+try
+{
+return
+win
+.
+location
+.
+href
+=
+=
+"
+about
+:
+blank
+"
+&
+&
+win
+.
+document
+.
+readyState
+=
+=
+"
+complete
+"
+;
+}
+catch
+(
+e
+)
+{
+return
+false
+;
+}
+}
+)
 ;
 extension
 .
