Backed out 5 changesets (bug 1650089) for Browser-chrome failures in  browser/components/originattributes/test/browser/browser_firstPartyIsolation_aboutPages.js. CLOSED TREE
Backed out changeset 26ddad079ad3 (bug 1650089)
Backed out changeset 5ae2b2641484 (bug 1650089)
Backed out changeset c5d267a1907c (bug 1650089)
Backed out changeset d9eeca699dec (bug 1650089)
Backed out changeset 8bb303f6831a (bug 1650089)

UltraBlame original commit: bbc5bf72442512d19c1bbe37fe3e5a6ccdec92df

--- a/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webnavigation_filters.html
@@ -1297,95 +1297,36 @@ data
 }
 )
 ;
-win
-.
-location
-=
+/
+/
+Bug
+1589102
+:
+using
+plain
 "
 about
 :
 blank
 "
-;
-/
-/
-Wait
-for
-the
-about
-:
-blank
-load
-to
-finish
-before
-continuing
+crashes
+here
 in
-case
-this
-/
-/
-load
-is
-causing
-a
-process
-switch
-back
-into
-our
-process
+fission
++
+debug
 .
-await
-SimpleTest
-.
-promiseWaitForCondition
-(
-(
-)
-=
->
-{
-try
-{
-return
 win
 .
 location
-.
-href
-=
 =
 "
 about
 :
 blank
+?
+2
 "
-&
-&
-win
-.
-document
-.
-readyState
-=
-=
-"
-complete
-"
-;
-}
-catch
-(
-e
-)
-{
-return
-false
-;
-}
-}
-)
 ;
 extension
 .
