Bug 1722799 - Prevent the UITour highlight background from having a solid background. r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D121142

UltraBlame original commit: 6b48ea29a1ee09e5400a280ea23667f5a23a493c

--- a/browser/themes/shared/UITour.inc.css
+++ b/browser/themes/shared/UITour.inc.css
@@ -83,13 +83,21 @@ shadow
 :
 none
 ;
+-
+-
+panel
+-
 border
-:
-none
-;
-background
 -
 color
+:
+transparent
+;
+-
+-
+panel
+-
+background
 :
 transparent
 ;
@@ -122,6 +130,10 @@ UITourHighlight
 .
 *
 /
+-
+-
+panel
+-
 padding
 :
 4px
