--- a/docs/_static/custom_theme.css
+++ b/docs/_static/custom_theme.css
@@ -174,3 +174,32 @@ line
 through
 ;
 }
+/
+*
+Better
+control
+over
+the
+table
+on
+this
+page
+*
+/
+.
+matcher
+-
+cookbook
+td
+{
+white
+-
+space
+:
+break
+-
+spaces
+!
+important
+;
+}
