Bug 1722739 - Newtab Pocket privacy link hover underline fix r=amy
Differential Revision: https://phabricator.services.mozilla.com/D121124

UltraBlame original commit: 6a4556f03d4efe1093a9f06a8f39974219193dbd

--- a/browser/components/newtab/css/activity-stream-linux.css
+++ b/browser/components/newtab/css/activity-stream-linux.css
@@ -33329,6 +33329,26 @@ end
 .
 ds
 -
+navigation
+.
+ds
+-
+navigation
+-
+privacy
+:
+hover
+{
+text
+-
+decoration
+:
+underline
+;
+}
+.
+ds
+-
 section
 -
 title
