--- a/browser/components/newtab/css/activity-stream-mac.css
+++ b/browser/components/newtab/css/activity-stream-mac.css
@@ -33349,6 +33349,26 @@ end
 .
 ds
 -
+navigation
+.
+ds
+-
+navigation
+-
+privacy
+:
+hover
+{
+text
+-
+decoration
+:
+underline
+;
+}
+.
+ds
+-
 section
 -
 title
