--- a/browser/components/newtab/css/activity-stream-windows.css
+++ b/browser/components/newtab/css/activity-stream-windows.css
@@ -33329,6 +33329,26 @@ end
 .
 ds
 -
+navigation
+.
+ds
+-
+navigation
+-
+privacy
+:
+hover
+{
+text
+-
+decoration
+:
+underline
+;
+}
+.
+ds
+-
 section
 -
 title
