Bug 1722666 - Adjust the urlbar line-height fix from bug 1671525 to avoid potentially clipping glyph descenders. r=dao
Differential Revision: https://phabricator.services.mozilla.com/D121188

UltraBlame original commit: 02f61e2051ffe6c51aa38a1730d877a367eb7890

--- a/browser/themes/shared/urlbarView.inc.css
+++ b/browser/themes/shared/urlbarView.inc.css
@@ -807,14 +807,6 @@ row
 -
 inner
 {
-line
--
-height
-:
-1
-.
-2
-;
 display
 :
 flex
@@ -4108,6 +4100,40 @@ white
 space
 :
 nowrap
+;
+/
+*
+Explicitly
+set
+line
+-
+height
+to
+avoid
+excessively
+tall
+rows
+if
+the
+title
+triggers
+use
+of
+fallback
+fonts
+with
+extreme
+metrics
+.
+*
+/
+line
+-
+height
+:
+1
+.
+4
 ;
 }
 .
