--- a/browser/base/content/sanitizeDialog.css
+++ b/browser/base/content/sanitizeDialog.css
@@ -233,3 +233,37 @@ margin
 0
 ;
 }
+#
+titleText
+{
+margin
+-
+block
+-
+start
+:
+0
+;
+margin
+-
+inline
+:
+4px
+;
+}
+dialog
+:
+not
+(
+[
+inbrowserwindow
+]
+)
+#
+titleText
+{
+display
+:
+none
+;
+}
