Bug 1720262 - improve spacing in the window-modal clear recent history dialog, r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D120985

UltraBlame original commit: 22014e5ee92cb5612fdcce112f66bc177f89cfc1

--- a/browser/base/content/sanitizeDialog.css
+++ b/browser/base/content/sanitizeDialog.css
@@ -207,6 +207,12 @@ padding
 :
 16px
 ;
+margin
+-
+block
+:
+6px
+;
 }
 #
 sanitizeEverythingWarningIcon
@@ -265,5 +271,119 @@ titleText
 display
 :
 none
+;
+}
+dialog
+[
+inbrowserwindow
+]
+{
+-
+-
+grid
+-
+padding
+:
+16px
+;
+padding
+:
+var
+(
+-
+-
+grid
+-
+padding
+)
+calc
+(
+var
+(
+-
+-
+grid
+-
+padding
+)
+-
+4px
+)
+;
+}
+dialog
+[
+inbrowserwindow
+]
+groupbox
+dialog
+[
+inbrowserwindow
+]
+#
+sanitizeEverythingWarningBox
+dialog
+[
+inbrowserwindow
+]
+#
+SanitizeDurationBox
+{
+margin
+-
+inline
+:
+4px
+;
+}
+dialog
+[
+inbrowserwindow
+]
+#
+sanitizeDurationLabel
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
+dialog
+[
+inbrowserwindow
+]
+#
+sanitizeDurationSuffixLabel
+{
+margin
+-
+inline
+-
+end
+:
+0
+;
+}
+dialog
+[
+inbrowserwindow
+]
+groupbox
+:
+last
+-
+child
+{
+margin
+-
+block
+-
+end
+:
+16px
 ;
 }
