Bug 1703630 - update mac reftests for proton and remove last proton media queries from toolkit, r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D121204

UltraBlame original commit: 664f97f70341139e3c362d559d63a4f559373c40

--- a/toolkit/themes/windows/global/checkbox.css
+++ b/toolkit/themes/windows/global/checkbox.css
@@ -243,33 +243,29 @@ checkbox
 inc
 .
 css
-media
+/
+*
+:
+:
+:
+:
+:
+checkbox
+:
+:
+:
+:
+:
+*
+/
+checkbox
+:
+where
 (
--
-moz
--
-proton
-)
-{
-/
-*
-:
-:
-:
-:
-:
-checkbox
-:
-:
-:
-:
-:
-*
-/
-checkbox
 [
 native
 ]
+)
 {
 appearance
 :
@@ -517,279 +513,3 @@ end
 5px
 ;
 }
-}
-/
-*
-*
-END
-Proton
-*
-*
-/
-media
-not
-(
--
-moz
--
-proton
-)
-{
-/
-*
-:
-:
-:
-:
-:
-checkbox
-:
-:
-:
-:
-:
-*
-/
-checkbox
-{
-appearance
-:
-auto
-;
--
-moz
--
-default
--
-appearance
-:
-checkbox
--
-container
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-margin
-:
-2px
-4px
-;
-padding
--
-top
-:
-1px
-;
-padding
--
-bottom
-:
-1px
-;
-padding
--
-inline
--
-start
-:
-4px
-;
-padding
--
-inline
--
-end
-:
-2px
-;
-}
-.
-checkbox
--
-label
-{
-margin
-:
-0
-;
-}
-/
-*
-.
-.
-.
-.
-.
-focused
-state
-.
-.
-.
-.
-.
-*
-/
-checkbox
-:
--
-moz
--
-focusring
->
-.
-checkbox
--
-label
--
-box
-{
-outline
-:
-1px
-dotted
-;
-}
-/
-*
-.
-.
-.
-.
-.
-disabled
-state
-.
-.
-.
-.
-.
-*
-/
-checkbox
-[
-disabled
-=
-"
-true
-"
-]
-{
-color
-:
-GrayText
-;
-}
-media
-(
--
-moz
--
-windows
--
-classic
-)
-{
-checkbox
-[
-disabled
-=
-"
-true
-"
-]
-{
-color
-:
-ThreeDShadow
-;
-text
--
-shadow
-:
-1px
-1px
-ThreeDHighlight
-;
-}
-}
-/
-*
-:
-:
-:
-:
-:
-checkmark
-image
-:
-:
-:
-:
-:
-*
-/
-.
-checkbox
--
-check
-{
-appearance
-:
-auto
-;
--
-moz
--
-default
--
-appearance
-:
-checkbox
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-min
--
-width
-:
-13px
-;
-min
--
-height
-:
-13px
-;
-margin
--
-inline
--
-end
-:
-3px
-;
-}
-}
-/
-*
-*
-END
-not
-Proton
-*
-*
-/
