--- a/toolkit/themes/linux/global/checkbox.css
+++ b/toolkit/themes/linux/global/checkbox.css
@@ -243,33 +243,29 @@ checkbox
 inc
 .
 css
-media
+/
+*
+:
+:
+:
+:
+:
+checkbox
+:
+:
+:
+:
+:
+*
+/
+checkbox
+:
+where
 (
--
-moz
--
-proton
-)
-{
-/
-*
-:
-:
-:
-:
-:
-checkbox
-:
-:
-:
-:
-:
-*
-/
-checkbox
 [
 native
 ]
+)
 {
 appearance
 :
@@ -487,241 +483,3 @@ end
 4px
 ;
 }
-}
-/
-*
-*
-END
-Proton
-*
-*
-/
-media
-not
-(
--
-moz
--
-proton
-)
-{
-/
-*
-:
-:
-:
-:
-:
-checkbox
-:
-:
-:
-:
-:
-*
-/
-checkbox
-{
-appearance
-:
-auto
-;
--
-moz
--
-default
--
-appearance
-:
-checkbox
--
-container
-;
--
-moz
--
-box
--
-align
-:
-center
-;
-margin
-:
-2px
-4px
-;
-}
-.
-checkbox
--
-label
--
-box
-{
-appearance
-:
-auto
-;
--
-moz
--
-default
--
-appearance
-:
-checkbox
--
-label
-;
-}
-.
-checkbox
--
-label
-{
-margin
-:
-0
-;
-}
-/
-*
-.
-.
-.
-.
-.
-focused
-state
-.
-.
-.
-.
-.
-*
-/
-checkbox
-:
--
-moz
--
-focusring
->
-.
-checkbox
--
-label
--
-box
-{
-/
-*
-Native
-theming
-should
-take
-care
-of
-this
-but
-it
-appears
-to
-be
-broken
-with
-some
-Gtk
-themes
-.
-Bug
-1312169
-.
-*
-/
-outline
-:
-1px
-dotted
-;
-}
-/
-*
-.
-.
-.
-.
-.
-disabled
-state
-.
-.
-.
-.
-.
-*
-/
-checkbox
-[
-disabled
-=
-"
-true
-"
-]
-{
-color
-:
-GrayText
-;
-}
-/
-*
-:
-:
-:
-:
-:
-checkmark
-image
-:
-:
-:
-:
-:
-*
-/
-.
-checkbox
--
-check
-{
-appearance
-:
-auto
-;
--
-moz
--
-default
--
-appearance
-:
-checkbox
-;
-margin
-:
-2px
-;
-}
-}
-/
-*
-*
-END
-not
-Proton
-*
-*
-/
