Bug 1702708 - Hyphenate places context menu attributes r=mak
Differential Revision: https://phabricator.services.mozilla.com/D121583

UltraBlame original commit: 319dc5ec8d89e9b18d0256e9256b14dce06ee79d

--- a/browser/components/places/content/placesContextMenu.inc.xhtml
+++ b/browser/components/places/content/placesContextMenu.inc.xhtml
@@ -112,17 +112,29 @@ default
 "
 true
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
 "
-hideifsingleclickopens
+hide
+-
+if
+-
+single
+-
+click
+-
+opens
 =
 "
 true
@@ -164,14 +176,18 @@ all
 -
 bookmarks
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 |
 none
 "
-nodetype
+node
+-
+type
 =
 "
 folder
@@ -215,12 +231,16 @@ all
 -
 bookmarks
 "
-selectiontype
+selection
+-
+type
 =
 "
 multiple
 "
-nodetype
+node
+-
+type
 =
 "
 link_bookmark
@@ -258,12 +278,16 @@ in
 -
 tab
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
@@ -307,19 +331,29 @@ in
 -
 tabs
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 |
 none
 "
-nodetype
+node
+-
+type
 =
 "
 query
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 query_tag
@@ -363,17 +397,27 @@ in
 -
 tabs
 "
-selectiontype
+selection
+-
+type
 =
 "
 multiple
 "
-nodetype
+node
+-
+type
 =
 "
 link
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 link_bookmark
@@ -411,12 +455,16 @@ in
 -
 window
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
@@ -456,17 +504,27 @@ private
 -
 window
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
 "
-hideifprivatebrowsing
+hide
+-
+if
+-
+private
+-
+browsing
 =
 "
 true
@@ -511,7 +569,9 @@ edit
 -
 bookmark
 "
-nodetype
+node
+-
+type
 =
 "
 link_bookmark
@@ -547,12 +607,20 @@ edit
 -
 generic
 "
-nodetype
+node
+-
+type
 =
 "
 query
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 query_host
@@ -590,7 +658,9 @@ edit
 -
 folder
 "
-nodetype
+node
+-
+type
 =
 "
 folder
@@ -644,7 +714,9 @@ closemenu
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link_bookmark
@@ -693,7 +765,9 @@ command
 "
 placesCmd_delete
 "
-nodetype
+node
+-
+type
 =
 "
 folder
@@ -735,7 +809,17 @@ closemenu
 "
 single
 "
-hideifnodetypeisonly
+hide
+-
+if
+-
+node
+-
+type
+-
+is
+-
+only
 =
 "
 link
@@ -761,12 +845,20 @@ closemenu
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 link_bookmark
@@ -805,19 +897,29 @@ closemenu
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link
 |
 query_host
 "
-selectiontype
+selection
+-
+type
 =
 "
 single
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 link_bookmark
@@ -858,7 +960,9 @@ closemenu
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 folder
@@ -904,7 +1008,9 @@ closemenu
 "
 single
 "
-nodetype
+node
+-
+type
 =
 "
 link_bookmark
@@ -915,7 +1021,13 @@ separator
 |
 query
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 link_bookmark_tag
@@ -990,7 +1102,15 @@ closemenu
 "
 single
 "
-hideifnoinsertionpoint
+hide
+-
+if
+-
+no
+-
+insertion
+-
+point
 =
 "
 true
@@ -1035,12 +1155,22 @@ add
 -
 bookmark
 "
-selectiontype
+selection
+-
+type
 =
 "
 any
 "
-hideifnoinsertionpoint
+hide
+-
+if
+-
+no
+-
+insertion
+-
+point
 =
 "
 true
@@ -1078,12 +1208,22 @@ folder
 -
 contextmenu
 "
-selectiontype
+selection
+-
+type
 =
 "
 any
 "
-hideifnoinsertionpoint
+hide
+-
+if
+-
+no
+-
+insertion
+-
+point
 =
 "
 true
@@ -1124,12 +1264,22 @@ closemenu
 "
 single
 "
-selectiontype
+selection
+-
+type
 =
 "
 any
 "
-hideifnoinsertionpoint
+hide
+-
+if
+-
+no
+-
+insertion
+-
+point
 =
 "
 true
@@ -1175,12 +1325,22 @@ closemenu
 "
 single
 "
-selectiontype
+selection
+-
+type
 =
 "
 none
 "
-hideifnoinsertionpoint
+hide
+-
+if
+-
+no
+-
+insertion
+-
+point
 =
 "
 true
@@ -1208,12 +1368,20 @@ command
 "
 placesCmd_createBookmark
 "
-nodetype
+node
+-
+type
 =
 "
 link
 "
-hideifnodetype
+hide
+-
+if
+-
+node
+-
+type
 =
 "
 link_bookmark
@@ -1247,7 +1415,9 @@ Browser
 :
 ShowAllBookmarks
 "
-ignoreitem
+ignore
+-
+item
 =
 "
 true
