Bug 1723023 - Restore page action hover/active backgrounds. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D121396

UltraBlame original commit: 99e8100d69d743a740118a0e8496c47a3335f17f

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -3680,7 +3680,35 @@ compact
 .
 urlbar
 -
-icon
+page
+-
+action
+:
+root
+[
+uidensity
+=
+compact
+]
+#
+urlbar
+-
+go
+-
+button
+:
+root
+[
+uidensity
+=
+compact
+]
+.
+search
+-
+go
+-
+button
 {
 margin
 -
@@ -3692,7 +3720,9 @@ inline
 .
 urlbar
 -
-icon
+page
+-
+action
 :
 not
 (
@@ -3700,6 +3730,22 @@ not
 disabled
 ]
 )
+:
+hover
+#
+urlbar
+-
+go
+-
+button
+:
+hover
+.
+search
+-
+go
+-
+button
 :
 hover
 {
@@ -3722,7 +3768,9 @@ hsla
 .
 urlbar
 -
-icon
+page
+-
+action
 :
 not
 (
@@ -3736,7 +3784,9 @@ open
 .
 urlbar
 -
-icon
+page
+-
+action
 :
 not
 (
@@ -3744,6 +3794,26 @@ not
 disabled
 ]
 )
+:
+hover
+:
+active
+#
+urlbar
+-
+go
+-
+button
+:
+hover
+:
+active
+.
+search
+-
+go
+-
+button
 :
 hover
 :
@@ -3768,7 +3838,9 @@ hsla
 .
 urlbar
 -
-icon
+page
+-
+action
 :
 -
 moz
