Bug 1721658 - Replace icon on certificate error page with plain warning triangle r=Gijs
Replaced the old certificate error page icon with the warning triangle. Set the color to monochrome for high contrast. Adjusted the shrinking behavior to move the icon to the top center when the viewport becomes smaller. Removed the old unused certificate error page icon.

Differential Revision: https://phabricator.services.mozilla.com/D121387

UltraBlame original commit: 9c02e3c72d75a0ac73a574d977ec370c391013ae

--- a/browser/themes/shared/aboutNetError.css
+++ b/browser/themes/shared/aboutNetError.css
@@ -77,6 +77,77 @@ css
 )
 ;
 body
+{
+-
+-
+warning
+-
+color
+:
+#
+ffa436
+;
+}
+media
+(
+-
+moz
+-
+toolbar
+-
+prefers
+-
+color
+-
+scheme
+:
+dark
+)
+{
+body
+{
+-
+-
+warning
+-
+color
+:
+#
+ffbd4f
+;
+}
+}
+media
+(
+prefers
+-
+contrast
+)
+{
+body
+{
+-
+-
+warning
+-
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+color
+)
+;
+}
+}
+body
 .
 certerror
 {
@@ -125,12 +196,38 @@ image
 url
 (
 "
-cert
--
-error
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+warning
 .
 svg
 "
+)
+;
+}
+body
+.
+certerror
+.
+title
+{
+color
+:
+var
+(
+-
+-
+warning
+-
+color
 )
 ;
 }
@@ -1063,6 +1160,102 @@ word
 wrap
 :
 anywhere
+;
+}
+}
+media
+(
+max
+-
+width
+:
+970px
+)
+{
+body
+.
+certerror
+.
+title
+{
+/
+*
+!
+important
+is
+necessary
+here
+until
+Bug
+1723718
+is
+resolved
+*
+/
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+icons
+/
+warning
+.
+svg
+"
+)
+!
+important
+;
+background
+-
+position
+:
+top
+left
+;
+padding
+-
+top
+:
+60px
+;
+margin
+-
+top
+:
+-
+60px
+;
+}
+body
+.
+certerror
+.
+title
+:
+dir
+(
+rtl
+)
+{
+background
+-
+position
+-
+x
+:
+right
 ;
 }
 }
