Bug 1698814 - Part 1 - Consolidate toolbar-field background color variables. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D117028

UltraBlame original commit: adcdec3642b1c71ee9344ceb0b207035aaca4742

--- a/toolkit/themes/shared/findbar.css
+++ b/toolkit/themes/shared/findbar.css
@@ -334,8 +334,6 @@ findbar
 {
 -
 -
-lwt
--
 toolbar
 -
 field
@@ -374,13 +372,15 @@ initial
 ;
 -
 -
-lwt
--
 toolbar
 -
 field
 -
 focus
+-
+background
+-
+color
 :
 initial
 ;
@@ -507,8 +507,6 @@ var
 (
 -
 -
-lwt
--
 toolbar
 -
 field
@@ -516,7 +514,6 @@ field
 background
 -
 color
-Field
 )
 )
 ;
