--- a/toolkit/themes/shared/global.inc.css
+++ b/toolkit/themes/shared/global.inc.css
@@ -346,6 +346,86 @@ fill
 :
 currentColor
 ;
+-
+-
+toolbar
+-
+field
+-
+background
+-
+color
+:
+Field
+;
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+background
+-
+color
+:
+Field
+;
+}
+:
+root
+:
+-
+moz
+-
+lwtheme
+{
+-
+-
+toolbar
+-
+field
+-
+background
+-
+color
+:
+rgba
+(
+255
+255
+255
+0
+.
+8
+)
+;
+/
+*
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+background
+-
+color
+is
+given
+a
+white
+fallback
+in
+LightweightThemeConsumer
+.
+jsm
+.
+*
+/
 }
 :
 is
