Bug 1698814 - Part 2 - Consolidate toolbar-field color variables. r=desktop-theme-reviewers,dao
Depends on D117028

Differential Revision: https://phabricator.services.mozilla.com/D117029

UltraBlame original commit: 06438078a0f88795cec086b57332009af80f6811

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -302,12 +302,7 @@ toolbar
 -
 field
 -
-non
--
-lwt
--
 color
-FieldText
 )
 ;
 }
@@ -827,38 +822,6 @@ color
 #
 urlbar
 :
--
-moz
--
-lwtheme
-#
-searchbar
-:
--
-moz
--
-lwtheme
-{
-color
-:
-var
-(
--
--
-lwt
--
-toolbar
--
-field
--
-color
-black
-)
-;
-}
-#
-urlbar
-:
 not
 (
 [
@@ -1013,30 +976,18 @@ true
 open
 ]
 )
-:
--
-moz
--
-lwtheme
 #
 searchbar
 :
 focus
 -
 within
-:
--
-moz
--
-lwtheme
 {
 color
 :
 var
 (
 -
--
-lwt
 -
 toolbar
 -
@@ -2812,20 +2763,7 @@ opacity
 ;
 fill
 :
-var
-(
--
--
-lwt
--
-toolbar
--
-field
--
-focus
--
-color
-)
+inherit
 ;
 border
 -
