--- a/toolkit/themes/shared/global.inc.css
+++ b/toolkit/themes/shared/global.inc.css
@@ -364,6 +364,16 @@ toolbar
 -
 field
 -
+color
+:
+FieldText
+;
+-
+-
+toolbar
+-
+field
+-
 focus
 -
 background
@@ -371,6 +381,18 @@ background
 color
 :
 Field
+;
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+color
+:
+FieldText
 ;
 }
 :
@@ -426,6 +448,28 @@ jsm
 .
 *
 /
+-
+-
+toolbar
+-
+field
+-
+color
+:
+black
+;
+-
+-
+toolbar
+-
+field
+-
+focus
+-
+color
+:
+black
+;
 }
 :
 is
