Bug 1698814 - Part 3 - Consolidate toolbar-field border variables. r=desktop-theme-reviewers,dao
Depends on D117029

Differential Revision: https://phabricator.services.mozilla.com/D117030

UltraBlame original commit: 26c024a20ea26f7fea6f38f25e1b9a368e0f56e2

--- a/toolkit/themes/shared/global.inc.css
+++ b/toolkit/themes/shared/global.inc.css
@@ -374,6 +374,18 @@ toolbar
 -
 field
 -
+border
+-
+color
+:
+ThreeDShadow
+;
+-
+-
+toolbar
+-
+field
+-
 focus
 -
 background
@@ -469,6 +481,18 @@ focus
 color
 :
 black
+;
+-
+-
+toolbar
+-
+field
+-
+border
+-
+color
+:
+transparent
 ;
 }
 :
