Bug 1696108 - Adjusted position of learn-more-link buttons and header text r=nchevobbe
Differential Revision: https://phabricator.services.mozilla.com/D121209

UltraBlame original commit: 4f9ba2f2861381e3d4cbfb16b59c21a8463159a0

--- a/devtools/client/shared/components/MdnLink.css
+++ b/devtools/client/shared/components/MdnLink.css
@@ -221,3 +221,27 @@ opacity
 4
 ;
 }
+.
+network
+-
+monitor
+.
+tabpanel
+-
+summary
+-
+value
+.
+status
+{
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
+}
