Bug 1723095 - Fix interactionsViewer message bar. r=harry
Differential Revision: https://phabricator.services.mozilla.com/D121374

UltraBlame original commit: 47314c5db1e2acc90c57b4186aa878b8df143989

--- a/browser/components/places/metadataViewer/interactionsViewer.css
+++ b/browser/components/places/metadataViewer/interactionsViewer.css
@@ -68,6 +68,12 @@ display
 :
 flex
 ;
+flex
+-
+wrap
+:
+wrap
+;
 }
 .
 hidden
@@ -75,6 +81,19 @@ hidden
 display
 :
 none
+;
+}
+.
+message
+-
+bar
+{
+flex
+:
+0
+0
+100
+%
 ;
 }
 .
