--- a/browser/components/screenshots/content/screenshots.html
+++ b/browser/components/screenshots/content/screenshots.html
@@ -237,6 +237,260 @@ template
 "
 >
 <
+div
+class
+=
+"
+image
+-
+view
+"
+>
+<
+div
+class
+=
+"
+preview
+-
+buttons
+"
+>
+<
+button
+class
+=
+"
+highlight
+-
+button
+-
+cancel
+"
+title
+=
+"
+Cancel
+"
+>
+<
+img
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+screenshots
+/
+cancel
+.
+svg
+"
+/
+>
+<
+/
+button
+>
+<
+button
+class
+=
+"
+highlight
+-
+button
+-
+copy
+"
+title
+=
+"
+Copy
+"
+>
+<
+img
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+screenshots
+/
+copy
+.
+svg
+"
+/
+>
+<
+span
+data
+-
+l10n
+-
+id
+=
+"
+screenshots
+-
+copy
+-
+button
+"
+/
+>
+<
+/
+button
+>
+<
+button
+class
+=
+"
+highlight
+-
+button
+-
+download
+"
+title
+=
+"
+Download
+"
+>
+<
+img
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+screenshots
+/
+download
+-
+white
+.
+svg
+"
+/
+>
+<
+span
+data
+-
+l10n
+-
+id
+=
+"
+screenshots
+-
+download
+-
+button
+"
+/
+>
+<
+/
+button
+>
+<
+/
+div
+>
+<
+div
+class
+=
+"
+preview
+-
+image
+"
+>
+<
+div
+class
+=
+"
+preview
+-
+image
+-
+area
+"
+>
+<
+!
+-
+-
+This
+is
+a
+placeholder
+image
+.
+-
+-
+>
+<
+img
+src
+=
+"
+chrome
+:
+/
+/
+browser
+/
+content
+/
+screenshots
+/
+cancel
+.
+svg
+"
+/
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
+/
+div
+>
+<
 /
 template
 >
