--- a/layout/reftests/flexbox/flexbox-align-self-baseline-horiz-3-ref.xhtml
+++ b/layout/reftests/flexbox/flexbox-align-self-baseline-horiz-3-ref.xhtml
@@ -182,6 +182,10 @@ serif
 ;
 }
 div
+.
+flexbox
+>
+label
 {
 display
 :
@@ -221,87 +225,6 @@ aqua
 background
 :
 aqua
-;
-}
-i
-{
-display
-:
-inline
--
-block
-;
-width
-:
-20px
-;
-height
-:
-2px
-;
-background
-:
-black
-;
-}
-.
-ref
-{
--
-moz
--
-appearance
-:
-none
-;
--
-ms
--
-appearance
-:
-none
-;
--
-webkit
--
-appearance
-:
-none
-;
-appearance
-:
-none
-;
-border
-:
-none
-;
-margin
-:
-0
-;
-padding
-:
-0
-;
-border
--
-bottom
-:
-2px
-solid
-black
-;
-width
-:
-20px
-;
-margin
--
-bottom
-:
--
-2px
 ;
 }
 <
