Bug 1724115 - Don't force urlbar focus to black on white with system theme. r=harry,dao
Not sure whether this is the right fix, but makes sense to me and fixes
the bug.

Differential Revision: https://phabricator.services.mozilla.com/D121800

UltraBlame original commit: def93532ae1ea833ed9d377276389c7de551eca7

--- a/toolkit/themes/shared/global.inc.css
+++ b/toolkit/themes/shared/global.inc.css
@@ -435,8 +435,6 @@ rgba
 8
 )
 ;
-/
-*
 -
 -
 toolbar
@@ -448,18 +446,9 @@ focus
 background
 -
 color
-is
-given
-a
+:
 white
-fallback
-in
-LightweightThemeConsumer
-.
-jsm
-.
-*
-/
+;
 -
 -
 toolbar
