Bug 1724461 - Update pdf.js to version 2.11.91 r=pdfjs-reviewers,calixte
Differential Revision: https://phabricator.services.mozilla.com/D122023

UltraBlame original commit: 020ddf7cb9fc32f9316f5b565931e657651d65fa

--- a/toolkit/components/pdfjs/content/web/viewer.css
+++ b/toolkit/components/pdfjs/content/web/viewer.css
@@ -335,6 +335,42 @@ rgba
 )
 ;
 }
+/
+*
+Avoids
+https
+:
+/
+/
+github
+.
+com
+/
+mozilla
+/
+pdf
+.
+js
+/
+issues
+/
+13840
+in
+Chrome
+*
+/
+.
+textLayer
+br
+:
+:
+selection
+{
+background
+:
+transparent
+;
+}
 .
 textLayer
 .
@@ -807,6 +843,49 @@ border
 1px
 solid
 transparent
+;
+}
+.
+annotationLayer
+.
+textWidgetAnnotation
+input
+:
+focus
+.
+annotationLayer
+.
+textWidgetAnnotation
+textarea
+:
+focus
+.
+annotationLayer
+.
+choiceWidgetAnnotation
+select
+:
+focus
+.
+annotationLayer
+.
+buttonWidgetAnnotation
+.
+checkBox
+:
+focus
+.
+annotationLayer
+.
+buttonWidgetAnnotation
+.
+radioButton
+:
+focus
+{
+outline
+:
+auto
 ;
 }
 .
@@ -1971,7 +2050,28 @@ transparent
 ;
 outline
 :
-none
+auto
+;
+outline
+-
+offset
+:
+-
+1px
+;
+}
+.
+xfaCheckbox
+:
+focus
+.
+xfaRadio
+:
+focus
+{
+outline
+:
+auto
 ;
 }
 .
@@ -2445,6 +2545,14 @@ LR
 3
 .
 5px
+;
+-
+-
+zoom
+-
+factor
+:
+1
 ;
 }
 media
@@ -14482,7 +14590,7 @@ xfaPage
 {
 position
 :
-initial
+absolute
 ;
 }
 #
