Bug 1714821 - Make bookmark separators easier to delete r=mak,desktop-theme-reviewers,dao
Proton removed the default HR appearance and replaced padding with margins. Unfortunately margins are not clickable. So this patch replaces margins with padding while maintaining the look of proton on Windows, MacOS, and Linux.

Differential Revision: https://phabricator.services.mozilla.com/D120253

UltraBlame original commit: db9c60da7473c7c55294cd1106f3bc514bf0c20c

--- a/browser/themes/linux/customizableui/panelUI.css
+++ b/browser/themes/linux/customizableui/panelUI.css
@@ -379,6 +379,50 @@ top
 -
 1px
 }
+/
+*
+Styled
+differently
+to
+allow
+for
+user
+interaction
+with
+menu
+separator
+*
+/
+#
+PlacesToolbar
+menupopup
+[
+placespopup
+=
+"
+true
+"
+]
+menuseparator
+{
+appearance
+:
+none
+!
+important
+;
+-
+moz
+-
+default
+-
+appearance
+:
+menuseparator
+!
+important
+;
+}
 menuitem
 .
 subviewbutton
