--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -272,86 +272,6 @@ root
 {
 -
 -
-arrowpanel
--
-menuitem
--
-margin
-:
-0
-;
--
--
-arrowpanel
--
-menuitem
--
-padding
--
-block
-:
-4px
-;
--
--
-arrowpanel
--
-menuitem
--
-padding
-:
-var
-(
--
--
-arrowpanel
--
-menuitem
--
-padding
--
-block
-)
-12px
-;
--
--
-arrowpanel
--
-menuitem
--
-border
--
-radius
-:
-unset
-;
--
--
-panel
--
-separator
--
-margin
-:
-6px
-0
-;
--
--
-panel
--
-subview
--
-body
--
-padding
-:
-6px
-0
-;
--
--
 panel
 -
 separator
@@ -609,9 +529,55 @@ panel
 separator
 -
 margin
+-
+vertical
 :
 4px
+;
+-
+-
+panel
+-
+separator
+-
+margin
+-
+horizontal
+:
 8px
+;
+-
+-
+panel
+-
+separator
+-
+margin
+:
+var
+(
+-
+-
+panel
+-
+separator
+-
+margin
+-
+vertical
+)
+var
+(
+-
+-
+panel
+-
+separator
+-
+margin
+-
+horizontal
+)
 ;
 -
 -
@@ -11042,6 +11008,11 @@ left
 6px
 ;
 }
+.
+PanelUI
+-
+subView
+menuseparator
 #
 PlacesToolbar
 menupopup
@@ -11051,15 +11022,6 @@ placespopup
 true
 ]
 toolbarseparator
-#
-PlacesToolbar
-menupopup
-[
-placespopup
-=
-true
-]
-menuseparator
 #
 widget
 -
@@ -11192,13 +11154,41 @@ padding
 0
 ;
 }
-.
-PanelUI
--
-subView
+/
+*
+Styled
+differently
+to
+allow
+for
+user
+interaction
+with
+menu
+separator
+*
+/
+#
+PlacesToolbar
+menupopup
+[
+placespopup
+=
+"
+true
+"
+]
 menuseparator
 {
+position
+:
+relative
+;
 appearance
+:
+none
+;
+border
 :
 none
 ;
@@ -11207,6 +11197,97 @@ min
 height
 :
 0
+;
+margin
+:
+0
+var
+(
+-
+-
+panel
+-
+separator
+-
+margin
+-
+horizontal
+)
+;
+padding
+-
+inline
+:
+0
+;
+padding
+-
+top
+:
+var
+(
+-
+-
+panel
+-
+separator
+-
+margin
+-
+vertical
+)
+;
+padding
+-
+bottom
+:
+calc
+(
+var
+(
+-
+-
+panel
+-
+separator
+-
+margin
+-
+vertical
+)
++
+1px
+)
+;
+}
+#
+PlacesToolbar
+menupopup
+[
+placespopup
+=
+"
+true
+"
+]
+menuseparator
+:
+:
+before
+{
+content
+:
+'
+'
+;
+position
+:
+absolute
+;
+width
+:
+100
+%
 ;
 border
 -
@@ -11230,23 +11311,6 @@ border
 bottom
 :
 none
-;
-margin
-:
-var
-(
--
--
-panel
--
-separator
--
-margin
-)
-;
-padding
-:
-0
 ;
 }
 .
