Bug 1723921 - Throw on invalid pseudo-elements in getComputedStyle() as per spec. r=dholbert,layout-reviewers
I need to update tests, try incoming.

Depends on D121705

Differential Revision: https://phabricator.services.mozilla.com/D121706

UltraBlame original commit: d9d140e0e045ab813e1984fc37a1a198e6e04728

--- a/layout/style/test/test_non_content_accessible_pseudos.html
+++ b/layout/style/test/test_non_content_accessible_pseudos.html
@@ -506,6 +506,10 @@ indexOf
 {
 let
 pseudoStyle
+;
+try
+{
+pseudoStyle
 =
 getComputedStyle
 (
@@ -515,6 +519,54 @@ documentElement
 pseudo
 )
 ;
+}
+catch
+(
+ex
+)
+{
+/
+/
+We
+can
+hit
+this
+when
+layout
+.
+css
+.
+computed
+-
+style
+.
+throw
+-
+on
+-
+invalid
+-
+pseudo
+is
+true
+assert_true
+(
+true
+{
+pseudo
+}
+shouldn
+'
+t
+be
+visible
+to
+content
+)
+;
+return
+;
+}
 let
 elementStyle
 =
