Bug 1283388 - Implement datetime-local UI. r=Gijs
This only shows the date picker for now (matches Safari). Seems fine
since we don't enable the time picker by default.

Differential Revision: https://phabricator.services.mozilla.com/D113116

UltraBlame original commit: 8aef29efdec24dc1356af56a3f3e0774be4668cf

--- a/layout/style/res/forms.css
+++ b/layout/style/res/forms.css
@@ -6715,6 +6715,13 @@ type
 =
 time
 ]
+[
+type
+=
+datetime
+-
+local
+]
 )
 {
 overflow
@@ -6750,6 +6757,13 @@ date
 type
 =
 time
+]
+[
+type
+=
+datetime
+-
+local
 ]
 )
 :
