Bug 1283388 - Implement datetime-local UI. r=Gijs
This only shows the date picker for now (matches Safari). Seems fine
since we don't enable the time picker by default.

Differential Revision: https://phabricator.services.mozilla.com/D113116

UltraBlame original commit: 6e763489ab1ee9a16cc6503b6eb664ecdca6679f

--- a/toolkit/components/satchel/test/test_form_autocomplete.html
+++ b/toolkit/components/satchel/test/test_form_autocomplete.html
@@ -6544,8 +6544,9 @@ restoreForm
 (
 )
 ;
-expectPopup
+waitForMenuChange
 (
+0
 )
 ;
 synthesizeKey
@@ -6563,42 +6564,37 @@ case
 checkMenuEntries
 (
 [
-"
-2016
--
-10
--
-21T10
-:
-10
-"
 ]
 )
 ;
-synthesizeKey
-(
-"
-KEY_ArrowDown
-"
-)
-;
-synthesizeKey
-(
-"
-KEY_Enter
-"
-)
-;
+/
+/
+type
+=
+datetime
+-
+local
+with
+it
+'
+s
+own
+control
+frame
+/
+/
+does
+not
+have
+a
+drop
+down
+menu
+for
+now
 checkForm
 (
 "
-2016
--
-10
--
-21T10
-:
-10
 "
 )
 ;
